<resources>

    <string name="app_name">Hidden Community</string>
    <string name="board_prompt">게시판 선택</string>

    <string name="action_move">Move</string>
    <string name="알림">알림</string>
    <string name="북마크">북마크</string>
    <string name="action_settings">Settings</string>
    <string name="쪽지보내기">쪽지 보내기</string>
    <string name="신고하기">신고하기</string>
    <string name="수정하기">수정하기</string>
    <string name="삭제하기">삭제하기</string>

    <string name="home">home</string>
    <string name="chat">chat</string>
    <string name="search">search</string>
    <string name="notice">notice</string>
    <string name="write">write</string>

    <string name="action_notice">Notice</string>
    <string name="대화방설정">대화방 설정</string>
    <string name="방나가기">방 나가기</string>

</resources>