<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NoticeBoardActivity">

    <item
        android:id="@+id/action_home"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_home"
        android:orderInCategory="101"
        android:title="@string/home" />
    <item
        android:id="@+id/action_message"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_message"
        android:orderInCategory="102"
        android:title="@string/chat" />

    <item
        android:id="@+id/action_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="103"
        android:title="@string/search" />

    <item
        android:id="@+id/action_notice"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_notice"
        android:orderInCategory="104"
        android:title="@string/notice" />

    <item
        android:id="@+id/action_write"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_write"
        android:orderInCategory="105"
        android:title="@string/write" />

    </menu>